# load_following_decision

./: .gitignore  README.md  _version.py  foldertree.doc  setup.cfg  setup.py
docs/: conf.py  example_output.md  example_tables  how_to_guide.md  installation_instructions.md  project_motivation.md
docs/example_plots_tables_STD2019/: fairbanks_ak_results.xlsx
docs/source/: conf.py  index.rst  requirements.md
lfd_package/: aux_boiler.py  chp.py  classes.py  command_line.py  plots.py  thermal_storage.py
lfd_package/input_demand_profiles/: STD2004_Buffalo_NY.csv  STD2004_InternationalFalls_MN.csv  STD2007_Buffalo_NY.csv  STD2007_Fairbanks_AK.csv  STD2007_GreatFalls_MT.csv  STD2007_Honolulu_HI.csv  STD2007_InternationalFalls_MN.csv  STD2010_Buffalo_NY.csv  STD2010_Fairbanks_AK.csv  STD2010_InternationalFalls_MN.csv  STD2010_Seattle_WA.csv  STD2013_Fairbanks_AK.csv  STD2013_GreatFalls_MT.csv  STD2013_Honolulu_HI.csv  STD2013_InternationalFalls_MN.csv  STD2013_Tucson_AZ.csv  STD2016_Buffalo_NY.csv  STD2016_GreatFalls_MT.csv  STD2016_Honolulu_HI.csv  STD2016_InternationalFalls_MN.csv  STD2016_Seattle_WA.csv  STD2016_Tucson_AZ.csv  STD2019_Buffalo_NY.csv  STD2019_Fairbanks_AK.csv  STD2019_IntFalls_MN.csv  post1980_chicago_illinois.csv  pre1980_Chicago_IL.csv  pre1980_Fairbanks_AK.csv  pre1980_Phoenix_AZ.csv  pre1980_florida_miami.csv
lfd_package/input_files/: STD2004_Fairbanks_AK.csv  STD2004_GreatFalls_MT.csv  STD2004_Honolulu_HI.csv  STD2004_Seattle_WA.csv  STD2004_Tucson_AZ.csv  STD2007_Seattle_WA.csv  STD2007_Tucson_AZ.csv  STD2010_GreatFalls_MT.csv  STD2010_Honolulu_HI.csv  STD2010_Tucson_AZ.csv  STD2013_Buffalo_NY.csv  STD2013_Seattle_WA.csv  STD2016_Fairbanks_AK.csv  STD2019_GreatFalls_MT.csv  STD2019_Honolulu_HI.csv  STD2019_Seattle_WA.csv  STD2019_Tucson_AZ.csv  buffalo_ny.yaml  chicago_il.yaml  debug_file.yaml  default_file.yaml  duluth_mn.yaml  fairbanks_ak.yaml  great-falls_mt.yaml  helena_mt.yaml  honolulu_hi.yaml  international-falls_mn.yaml  miami_fl.yaml  new2004_alaska_fairbanks.csv  new2004_arizona_pheonix.csv  new2004_chicago_illinois.csv  new2004_florida_miami.csv  new2004_minnesota_duluth.csv  new2004_montana_helena.csv  new2004_washington_seattle.csv  phoenix_az.yaml  post1980_alaska_fairbanks.csv  post1980_arizona_pheonix.csv  post1980_chicago_illinois.csv  post1980_florida_miami.csv  (+15 more)
lfd_package/input_yaml/: buffalo_ny.yaml  chicago_il.yaml  duluth_mn.yaml  fairbanks_ak.yaml  great-falls_mt.yaml  helena_mt.yaml  honolulu_hi.yaml  international-falls_mn.yaml  miami_fl.yaml  phoenix_az.yaml  seattle_wa.yaml  template.yaml  tucson_az.yaml
lfd_package/modules/: aux_boiler.py  chp.py  chp_tes_sizing.py  classes.py  costs.py  emissions.py  plots.py  sa.py  sensitivity.py  sizing_calcs.py  thermal_storage.py
lfd_package/tests/: conftest.py  test_aux_boiler.py  test_chp.py  (+6 more)
load_following_decision_package/: __init__.py  aux_boiler.py  chp.py  classes.py  command_line.py  electric_load_following.py  functions.py  inputs.yaml  optimization_variables.py  plots.py  project_proposal_curl.md  thermal_load_following.py  thermal_storage.py
source/: conf.py  index.rst
(+23 files in other folders)
