[metadata]
name = load_following_decision_chriscurl1538
version = 0.0.1
author = Christopher Curl
author_email = curlc@oregonstate.edu
description = This package performs an economic analysis of a micro-CHP system paired with thermal energy storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SoftwareDevEngResearch/load_following_decision
project_urls =
    Bug Tracker = https://github.com/SoftwareDevEngResearch/load_following_decision/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = load_following_decision_package
packages = find:
install_requires = [
    'pandas>=1.3.5',
    'PyYAML>=6.0',
    'pytest>=7.0.1',
    'tabulate>=0.8.9',
    'matplotlib>=3.5.1',
    'pint>=0.18'
                   ]
python_requires = >=3.7

[options.packages.find]
where = load_following_decision_package