[metadata]
name = load_following_decision_chriscurl1538
version = 0.1.0
author = Christopher Curl
author_email = curlc@oregonstate.edu
description = This package performs an economic analysis of a micro-CHP system paired with thermal energy storage
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/SoftwareDevEngResearch/load_following_decision
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Natural Language :: English

[options]
zip_safe = False
include_package_data = True
package_dir =
    = load_following_decision_package
packages = find:
install_requires =
    pandas>=1.3.5
    PyYAML>=6.0
    pytest>=7.0.1
    tabulate>=0.8.9
    matplotlib>=3.5.1
    pint>=0.18
python_requires = >=3.7

[options.packages.find]
where = load_following_decision_package