[metadata]
name = load_following_decision
version = 0.2.0
author = Christopher Curl
author_email = christopher.r.curl@gmail.com
description = This package performs energy, economic, and emissions analyses of a small-scale (<100 kWe) CHP system coupled with thermal energy storage
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/chriscurl1538/load_following_decision
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Natural Language :: English

[options]
zip_safe = False
include_package_data = True
package_dir =
    = lfd_package
packages = find:

install_requires =
    pandas>=1.3.5
    numpy>=1.21.5
    PyYAML>=6.0
    matplotlib>=3.5.1
    pint>=0.18
    openpyxl>=3.1.2
python_requires = >=3.7

[options.packages.find]
where = lfd_package